--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,12 +5,12 @@ plugins {
 
 android {
     namespace 'com.pitchedapps.split'
-    compileSdk 32
+    compileSdk 33
 
     defaultConfig {
         applicationId "com.pitchedapps.split"
         minSdk 24
-        targetSdk 32
+        targetSdk 33
         versionCode 1
         versionName "1.0"
 
@@ -51,10 +51,22 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.8.0'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.4.1'
     implementation 'androidx.activity:activity-compose:1.4.0'
+    implementation 'androidx.activity:activity-ktx:1.4.0'
+
+    def compose_version = '1.2.0-rc01'
     implementation "androidx.compose.ui:ui:$compose_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
+
+    implementation "androidx.navigation:navigation-compose:2.4.2"
+
+    implementation "io.coil-kt:coil-compose:2.1.0"
+
     implementation 'androidx.compose.material3:material3:1.0.0-alpha13'
+
+    implementation 'com.google.mlkit:text-recognition:16.0.0-beta4'
+
     testImplementation 'junit:junit:4.13.2'
+
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
