--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,18 +11,20 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Split"
-        tools:targetApi="31">
-        <activity
-            android:name=".MainActivity"
+        tools:targetApi="33">
+        <activity-alias
+            android:name=".StartActivity"
             android:exported="true"
-            android:label="@string/app_name"
-            android:theme="@style/Theme.Split">
+            android:targetActivity=".main.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
+        </activity-alias>
+        <activity
+            android:name=".main.MainActivity"
+            android:exported="true" />
     </application>
 
 </manifest>
